<resources>
    <string name="app_name">Order of coffee</string>
    <string name="hint">Enter your name</string>
    <string name="titleOfToppings">Toppings</string>
    <string name="whippedCream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="subject">New order</string>
    <string name="usersName">Name</string>
    <string name="coffee">coffee(s)</string>
    <string name="totalPrice">Total price</string>
    <string name="thankYou">Thank you!</string>
</resources>
